--- a/Sales_Prediction.ipynb
+++ b/Sales_Prediction.ipynb
@@ -3895,7 +3895,7 @@
     }
    ],
    "source": [
-    "# Example: Calculate R-squared (R2) score\n",
+    "# Calculate R-squared (R2) score\n",
     "from sklearn.metrics import r2_score\n",
     "\n",
     "r2 = r2_score(ytest, y_pred)\n",
